Complete activities navigation, add buttons for player, review texts and styles.

--- a/app/src/main/res/layout/activity_albums.xml
+++ b/app/src/main/res/layout/activity_albums.xml
@@ -12,8 +12,10 @@
         style="@style/ActivityDescriptionStyle"
         android:text="@string/albums_activity_description" />
 
-    <ListView
-        style="@style/ResultsStyle" />
+    <TextView
+        android:id="@+id/album_textView"
+        style="@style/ResultsStyle"
+        android:text="@string/albumItem" />
 
     <Button
         android:id="@+id/button_goto_main"
