--- a/app/src/main/res/layout/activity_playlists.xml
+++ b/app/src/main/res/layout/activity_playlists.xml
@@ -12,8 +12,10 @@
         style="@style/ActivityDescriptionStyle"
         android:text="@string/playlists_activity_description" />
 
-    <ListView
-        style="@style/ResultsStyle" />
+    <TextView
+        android:id="@+id/playlist_textview"
+        style="@style/ResultsStyle"
+        android:text="@string/playlistItem" />
 
     <Button
         android:id="@+id/button_goto_main"
