--- a/app/src/main/res/layout/activity_podcasts.xml
+++ b/app/src/main/res/layout/activity_podcasts.xml
@@ -12,8 +12,10 @@
         style="@style/ActivityDescriptionStyle"
         android:text="@string/podcasts_activity_description" />
 
-    <ListView
-        style="@style/ResultsStyle" />
+    <TextView
+        android:id="@+id/podcast_textView"
+        style="@style/ResultsStyle"
+        android:text="@string/podcastItem" />
 
     <Button
         android:id="@+id/button_goto_main"
