--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,15 +28,15 @@
     <color name="category_playlists">#9e9e9e</color>
 
     <!-- Background color for Podcasts -->
-    <color name="category_podcasts">#e57373</color>
+    <color name="category_podcasts">#ef9a9a</color>
 
-    <!-- Background color for Detailed Info -->
-    <color name="category_detail">#9e9e9e</color>
-
-    <!-- Background color for Store -->
-    <color name="category_store">#e57373</color>
+    <!-- Background color for Activity Info -->
+    <color name="activity_info">#f0f4c3</color>
 
     <!-- Background color for Search -->
     <color name="category_search">#9e9e9e</color>
+
+    <!-- Background color for Detailed info -->
+    <color name="detailed_info">#c5e1a5</color>
 
 </resources>
