--- a/app/src/main/res/layout/activity_playlists.xml
+++ b/app/src/main/res/layout/activity_playlists.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_playlists"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context="com.example.lorenzo.musicapp.PlaylistsActivity">
 
@@ -19,7 +20,7 @@
 
     <Button
         android:id="@+id/button_goto_main"
-        style="@style/ButtonStyle"
+        style="@style/ButtonStyle.Home"
         android:text="@string/main_screen" />
 
 </LinearLayout>
