--- a/app/src/main/res/layout/activity_now_playing.xml
+++ b/app/src/main/res/layout/activity_now_playing.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_nowplaying"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:orientation="vertical"
     tools:context="com.example.lorenzo.musicapp.NowPlayingActivity">
 
@@ -37,9 +38,29 @@
     </LinearLayout>
 
     <LinearLayout
+        style="@style/SeekBarContainerStyle"
+        android:orientation="horizontal">
+
+        <TextView
+            style="@style/SeekBarTimeStyle"
+            android:text="00:00" />
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            style="@style/SeekBarStyle" />
+
+        <TextView
+            style="@style/SeekBarTimeStyle"
+            android:text="03:45" />
+
+
+    </LinearLayout>
+
+    <LinearLayout
         style="?android:attr/buttonBarStyle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/button_bar_height"
+        android:background="#EEEEEE"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -82,8 +103,7 @@
 
     <Button
         android:id="@+id/button_goto_main"
-        style="@style/ButtonStyle"
+        style="@style/ButtonStyle.Home"
         android:text="@string/main_screen" />
-
 
 </LinearLayout>
